testdata/baselines/reference/submodule/conformance/iterableArrayPattern18.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iterableArrayPattern18.ts(11,6): error TS2304: Cannot find name 'Symbol'.
iterableArrayPattern18.ts(16,14): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
iterableArrayPattern18.ts(16,15): error TS2339: Property '0' does not exist on type '{}'.
iterableArrayPattern18.ts(16,18): error TS2339: Property '1' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iterableArrayPattern18.ts (4 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }
    
    function fun([a, b]: Bar[]) { }
                 ~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                  ~
!!! error TS2339: Property '0' does not exist on type '{}'.
                     ~
!!! error TS2339: Property '1' does not exist on type '{}'.
    fun(new FooIterator);